chore: remove now unnecessary '--add-reads'
Signed-off-by: Jendrik Johannes <jendrik@onepiece.software>