@@ -71,15 +71,7 @@ extensions.getByName<GradleOnlyDirectives>("testChaosModuleInfo").apply {
 // Note: automatic modules are named from their package names (org.apache.commons.io for commons-io
 // JAR)
 // This is applied to all Test tasks to work across all execution methods (local, CI, etc.)
-tasks.withType<Test>().configureEach {
-    maxHeapSize = "8g"
-    jvmArgs(
-        "--add-reads=org.testcontainers=org.apache.commons.lang3",
-        "--add-reads=org.testcontainers=org.apache.commons.compress",
-        "--add-reads=org.testcontainers=org.apache.commons.io",
-        "--add-reads=org.testcontainers=org.apache.commons.codec",
-    )
-}
+tasks.withType<Test>().configureEach { maxHeapSize = "8g" }
 
 // This should probably not be necessary (Log4j issue?)
 // https://github.com/apache/logging-log4j2/pull/3053
